feat(dev-environment): add comprehensive development environment setup and configs
- Add .devcontainer with devcontainer.json and post-create.sh for containerized dev setup
- Introduce .editorconfig for consistent code style
- Add .env.example with detailed environment variables
- Setup .gitignore for project-specific ignores
- Add pre-commit-config.yaml for automated code quality checks
- Configure VSCode launch.json, settings.json, and tasks.json for debugging and tasks
- Add yamllint.yaml for YAML linting rules
- Add ARCHITECTURE.md detailing system architecture and design
- Create Dockerfile with multi-stage builds for dev, test, prod, edge, gpu, monitoring
- Add Makefile with extensive targets for build, test, lint, deploy, and more
- Add docker-compose.yml for multi-service orchestration including nodes, monitoring, db, dev, test
- Add docs/ROADMAP.md outlining project roadmap and milestones
- Add ADRs for P2P networking and consensus protocol choices
- Add package.json and pyproject.toml for project metadata and dependencies
- Add requirements.md specifying detailed requirements
- Add comprehensive test suites for conftest, e2e, integration, and performance

This commit establishes a robust foundation for development, testing, deployment, and documentation workflows.

Co-authored-by: terragon-labs[bot] <terragon-labs[bot]@users.noreply.github.com>

--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,81 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# =============================================================================
+# AGENT MESH SPECIFIC
+# =============================================================================
+
+# P2P networking data
+*.key
+*.crt
+*.pem
+*.p12
+*.pfx
+node_data/
+mesh_data/
+peer_store/
+
+# Federated learning artifacts
+models/
+*.model
+*.pkl
+*.pickle
+*.h5
+*.onnx
+*.pt
+*.pth
+checkpoints/
+fed_checkpoints/
+
+# Configuration overrides
+configs/local/
+configs/override/
+local.yaml
+local.yml
+local.json
+local.toml
+
+# Runtime data
+data/
+logs/
+run/
+var/
+*.sock
+
+# Monitoring data
+prometheus/
+grafana/
+metrics/
+
+# Test artifacts
+test_results/
+test_data/
+mock_data/
+benchmark_results/
+perf_results/
+
+# Performance profiling
+*.prof
+*.profile
+profile_output/
+
+# Docker volumes
+docker-volumes/
+
+# Kubernetes secrets
+k8s/secrets/
+
+# Protocol buffers compiled
+*_pb2.py
+*_pb2_grpc.py
+*.pb.go
+*.pb.cc
+*.pb.h
+
+# Keep example files
+!.env.example
+!configs/examples/
+!.github/
+!docs/assets/
+!tests/fixtures/
