--- a/.env.example
+++ b/.env.example
@@ -1,266 +1,279 @@
 # Agent Mesh Federated Runtime - Environment Configuration
 
 # =============================================================================
-# CORE CONFIGURATION
+# CORE SETTINGS
 # =============================================================================
 
-# Environment type (development, staging, production)
+# Environment type (development, testing, staging, production)
 ENVIRONMENT=development
 
-# Application settings
-APP_NAME=agent-mesh-federated-runtime
-APP_VERSION=1.0.0
+# Debug mode (true/false)
+DEBUG=true
+
+# Log level (DEBUG, INFO, WARNING, ERROR, CRITICAL)
 LOG_LEVEL=INFO
-DEBUG=false
+
+# Node configuration
+NODE_ID=auto-generated
+LISTEN_ADDRESS=/ip4/0.0.0.0/tcp/4001
+AUTO_ROLE_NEGOTIATION=true
 
 # =============================================================================
-# NETWORKING CONFIGURATION  
+# NETWORK CONFIGURATION
 # =============================================================================
 
-# P2P Network Settings
-P2P_LISTEN_ADDR=/ip4/0.0.0.0/tcp/4001
-P2P_ANNOUNCE_ADDR=/ip4/127.0.0.1/tcp/4001
-P2P_BOOTSTRAP_PEERS=
-P2P_NAT_TRAVERSAL=true
-P2P_RELAY_ENABLED=true
+# Bootstrap peers (comma-separated multiaddresses)
+BOOTSTRAP_PEERS=/ip4/127.0.0.1/tcp/4001/p2p/QmExamplePeer
 
-# gRPC Configuration
-GRPC_LISTEN_PORT=5001
-GRPC_MAX_MESSAGE_SIZE=104857600
-GRPC_COMPRESSION=gzip
-GRPC_KEEPALIVE_TIME=30
-GRPC_KEEPALIVE_TIMEOUT=10
+# Network protocols to enable
+ENABLED_PROTOCOLS=libp2p,grpc,webrtc
 
-# WebRTC Configuration (for browser/mobile nodes)
-WEBRTC_STUN_SERVERS=stun:stun.l.google.com:19302,stun:stun1.l.google.com:19302
-WEBRTC_TURN_SERVERS=
-WEBRTC_ICE_TIMEOUT=30
+# Connection limits
+MAX_CONNECTIONS=100
+CONNECTION_TIMEOUT=30
+
+# NAT traversal
+ENABLE_NAT_TRAVERSAL=true
+STUN_SERVERS=stun:stun.l.google.com:19302
 
 # =============================================================================
 # CONSENSUS CONFIGURATION
 # =============================================================================
 
-# PBFT Settings
-PBFT_FAULT_TOLERANCE=0.33
-PBFT_TIMEOUT_MS=5000
-PBFT_BATCH_SIZE=100
-PBFT_VIEW_CHANGE_TIMEOUT=10000
+# Consensus algorithm (pbft, raft, tendermint)
+CONSENSUS_ALGORITHM=pbft
 
-# Raft Settings  
-RAFT_ELECTION_TIMEOUT_MS=2000
-RAFT_HEARTBEAT_INTERVAL_MS=500
-RAFT_LOG_COMPACTION_THRESHOLD=1000
+# Byzantine fault tolerance (0.0 to 0.5)
+FAULT_TOLERANCE=0.33
 
-# Gossip Protocol
-GOSSIP_FANOUT=3
-GOSSIP_INTERVAL_MS=1000
-GOSSIP_TTL=5
+# Consensus timeouts (seconds)
+CONSENSUS_TIMEOUT=30
+VIEW_CHANGE_TIMEOUT=60
+
+# Minimum participants for consensus
+MIN_CONSENSUS_PARTICIPANTS=3
 
 # =============================================================================
-# FEDERATED LEARNING CONFIGURATION
+# FEDERATED LEARNING SETTINGS
 # =============================================================================
 
-# Training Parameters
+# Training configuration
 FL_ROUNDS=100
 FL_LOCAL_EPOCHS=5
 FL_BATCH_SIZE=32
 FL_LEARNING_RATE=0.01
-FL_MIN_NODES_PER_ROUND=3
-FL_AGGREGATION_STRATEGY=fedavg
 
-# Model Configuration
-MODEL_SAVE_INTERVAL=10
-MODEL_VALIDATION_INTERVAL=5
-MODEL_COMPRESSION=gzip
-MODEL_ENCRYPTION=true
+# Aggregation algorithm (fedavg, scaffold, fedprox, krum)
+FL_AGGREGATION_ALGORITHM=fedavg
 
-# Privacy Settings
-DIFFERENTIAL_PRIVACY_ENABLED=false
-DP_EPSILON=1.0
-DP_DELTA=1e-5
-DP_CLIPPING_THRESHOLD=1.0
+# Secure aggregation
+FL_SECURE_AGGREGATION=true
+FL_HOMOMORPHIC_ENCRYPTION=false
 
-# Secure Aggregation
-SECURE_AGGREGATION_PROTOCOL=shamir
-SECURE_AGGREGATION_THRESHOLD=0.5
-SECURE_AGGREGATION_TIMEOUT=60
+# Differential privacy
+FL_DIFFERENTIAL_PRIVACY=false
+FL_DP_EPSILON=1.0
+FL_DP_DELTA=1e-5
+
+# Participation requirements
+FL_MIN_PARTICIPANTS=3
+FL_MAX_PARTICIPANTS=100
+FL_PARTICIPATION_RATE=0.8
+
+# =============================================================================
+# MULTI-AGENT COORDINATION
+# =============================================================================
+
+# Coordination protocol (contract_net, blackboard, stigmergy, market_based)
+COORDINATION_PROTOCOL=contract_net
+
+# Collaboration strategy (competitive, cooperative, hybrid, emergent)
+COLLABORATION_STRATEGY=cooperative
+
+# Task scheduling
+MAX_CONCURRENT_TASKS=50
+TASK_TIMEOUT=300
+SCHEDULING_STRATEGY=load_balanced
 
 # =============================================================================
 # SECURITY CONFIGURATION
 # =============================================================================
 
-# Identity Management
-NODE_IDENTITY_TYPE=ed25519
-NODE_PRIVATE_KEY_PATH=./configs/keys/node.key
-NODE_CERTIFICATE_PATH=./configs/keys/node.crt
-CA_CERTIFICATE_PATH=./configs/keys/ca.crt
+# Encryption algorithm (chacha20_poly1305, aes_256_gcm, nacl_secretbox)
+ENCRYPTION_ALGORITHM=nacl_secretbox
 
-# Encryption Settings
-ENCRYPTION_PROTOCOL=noise_xx
-TLS_MIN_VERSION=1.3
-CIPHER_SUITES=chacha20_poly1305,aes_256_gcm
+# Signature algorithm (ed25519, rsa_pss, ecdsa)
+SIGNATURE_ALGORITHM=ed25519
 
-# Access Control
+# Security level (none, standard, high)
+SECURITY_LEVEL=standard
+
+# Access control
 RBAC_ENABLED=true
-RBAC_CONFIG_PATH=./configs/rbac.yaml
-AUDIT_LOGGING_ENABLED=true
-AUDIT_LOG_PATH=./logs/audit.log
+DEFAULT_ACCESS_LEVEL=participant
+
+# Key management
+KEY_ROTATION_INTERVAL=86400  # 24 hours in seconds
+KEY_SIZE=2048
 
 # =============================================================================
 # DATABASE CONFIGURATION
 # =============================================================================
 
-# Local Storage
-LOCAL_DB_PATH=./data/mesh.db
-LOCAL_DB_ENGINE=sqlite
-LOCAL_DB_POOL_SIZE=10
+# Database URL (SQLite for development, PostgreSQL for production)
+DATABASE_URL=sqlite:///data/agent_mesh.db
 
-# Distributed Storage (IPFS)
-IPFS_ENABLED=false
-IPFS_API_ADDR=/ip4/127.0.0.1/tcp/5001
-IPFS_GATEWAY_ADDR=/ip4/127.0.0.1/tcp/8080
+# Connection pool settings
+DB_POOL_SIZE=10
+DB_MAX_OVERFLOW=20
+DB_POOL_TIMEOUT=30
+
+# Migration settings
+DB_AUTO_MIGRATE=true
+DB_BACKUP_ENABLED=true
 
 # =============================================================================
-# MONITORING & OBSERVABILITY
+# CACHE CONFIGURATION
 # =============================================================================
 
-# Metrics
+# Redis configuration
+REDIS_URL=redis://localhost:6379/0
+REDIS_PASSWORD=
+REDIS_TIMEOUT=5
+
+# Cache settings
+CACHE_TTL=3600  # 1 hour
+CACHE_MAX_SIZE=1000
+
+# =============================================================================
+# MONITORING AND OBSERVABILITY
+# =============================================================================
+
+# Metrics collection
 METRICS_ENABLED=true
 METRICS_PORT=9090
-METRICS_PATH=/metrics
-PROMETHEUS_PUSHGATEWAY_URL=
+METRICS_INTERVAL=60
 
-# Logging
-LOG_FORMAT=json
-LOG_OUTPUT=stdout
-LOG_FILE_PATH=./logs/agent-mesh.log
-LOG_ROTATION_SIZE=100MB
+# Prometheus configuration
+PROMETHEUS_ENDPOINT=http://localhost:9090
+PROMETHEUS_SCRAPE_INTERVAL=15s
+
+# Grafana dashboard
+GRAFANA_URL=http://localhost:3000
+GRAFANA_API_KEY=
+
+# Logging configuration
+LOG_FORMAT=json  # json, text
+LOG_ROTATION=true
+LOG_MAX_SIZE=100MB
 LOG_RETENTION_DAYS=30
 
-# Tracing
+# Distributed tracing
 TRACING_ENABLED=false
 JAEGER_ENDPOINT=http://localhost:14268/api/traces
-TRACE_SAMPLING_RATE=0.1
 
-# Health Checks
-HEALTH_CHECK_ENABLED=true
-HEALTH_CHECK_PORT=8080
-HEALTH_CHECK_PATH=/health
+# Health check configuration
 HEALTH_CHECK_INTERVAL=30
+HEALTH_CHECK_TIMEOUT=10
 
 # =============================================================================
-# DEVELOPMENT CONFIGURATION
+# PERFORMANCE TUNING
 # =============================================================================
 
-# Development Tools
-DEV_MODE=true
+# Resource limits
+MAX_MEMORY_MB=4096
+MAX_CPU_PERCENT=80
+MAX_DISK_USAGE_PERCENT=85
+
+# Networking performance
+SEND_BUFFER_SIZE=65536
+RECEIVE_BUFFER_SIZE=65536
+TCP_KEEPALIVE=true
+
+# Concurrency settings
+MAX_WORKERS=4
+ASYNC_POOL_SIZE=100
+
+# =============================================================================
+# DEVELOPMENT SETTINGS
+# =============================================================================
+
+# Development tools
+ENABLE_PROFILING=false
+ENABLE_DEBUG_ENDPOINTS=true
 HOT_RELOAD=true
-DEV_SERVER_PORT=8000
-DEV_DASHBOARD_PORT=3000
 
-# Testing
-TEST_NETWORK_SIZE=5
-TEST_BYZANTINE_NODES=1
-TEST_TIMEOUT=60
-INTEGRATION_TEST_ENABLED=true
+# Testing configuration
+TEST_DATABASE_URL=sqlite:///:memory:
+TEST_NETWORK_SIMULATION=true
+MOCK_EXTERNAL_SERVICES=true
 
-# Debugging
-DEBUG_P2P=false
-DEBUG_CONSENSUS=false
-DEBUG_FEDERATED_LEARNING=false
-PROFILING_ENABLED=false
+# API configuration
+API_CORS_ENABLED=true
+API_CORS_ORIGINS=http://localhost:3000,http://localhost:8080
+API_RATE_LIMITING=false
 
 # =============================================================================
 # DEPLOYMENT CONFIGURATION
 # =============================================================================
 
-# Container Settings
-CONTAINER_REGISTRY=ghcr.io
-CONTAINER_IMAGE=agent-mesh-federated-runtime
-CONTAINER_TAG=latest
+# Container settings
+CONTAINER_PORT=8080
+HEALTH_CHECK_PATH=/health
+READINESS_CHECK_PATH=/ready
 
-# Kubernetes
-K8S_NAMESPACE=agent-mesh
-K8S_SERVICE_ACCOUNT=agent-mesh-sa
-K8S_CONFIG_MAP=agent-mesh-config
-K8S_SECRET=agent-mesh-secrets
+# Load balancing
+LOAD_BALANCER_ALGORITHM=round_robin
+STICKY_SESSIONS=false
 
-# Resource Limits
-MAX_MEMORY_MB=4096
-MAX_CPU_CORES=4
-MAX_DISK_GB=100
-NETWORK_BANDWIDTH_MBPS=1000
+# Auto-scaling
+AUTO_SCALING_ENABLED=false
+MIN_REPLICAS=1
+MAX_REPLICAS=10
+CPU_THRESHOLD=70
 
 # =============================================================================
-# CLOUD PROVIDER CONFIGURATION
+# EXTERNAL INTEGRATIONS
 # =============================================================================
 
-# AWS Configuration
-AWS_REGION=us-west-2
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_EKS_CLUSTER_NAME=
-AWS_S3_BUCKET=
+# Message queues
+MESSAGE_BROKER_URL=amqp://localhost:5672
+QUEUE_DURABLE=true
+QUEUE_AUTO_DELETE=false
 
-# Google Cloud Configuration  
-GCP_PROJECT_ID=
-GCP_REGION=us-central1
-GCP_SERVICE_ACCOUNT_KEY=
-GKE_CLUSTER_NAME=
+# Notification services
+SLACK_WEBHOOK_URL=
+EMAIL_SMTP_SERVER=
+EMAIL_SMTP_PORT=587
+EMAIL_USERNAME=
+EMAIL_PASSWORD=
 
-# Azure Configuration
-AZURE_SUBSCRIPTION_ID=
-AZURE_RESOURCE_GROUP=
-AZURE_TENANT_ID=
-AKS_CLUSTER_NAME=
-
-# =============================================================================
-# EXTERNAL SERVICES
-# =============================================================================
-
-# Message Brokers
-KAFKA_BROKERS=
-RABBITMQ_URL=
-REDIS_URL=redis://localhost:6379
-
-# Databases
-POSTGRES_URL=
-MONGODB_URL=
-ELASTICSEARCH_URL=
-
-# Monitoring Services
-GRAFANA_URL=
-PROMETHEUS_URL=
-ALERTMANAGER_URL=
+# Monitoring services
+SENTRY_DSN=
+DATADOG_API_KEY=
+NEW_RELIC_LICENSE_KEY=
 
 # =============================================================================
 # FEATURE FLAGS
 # =============================================================================
 
-# Experimental Features
-ENABLE_QUANTUM_CRYPTO=false
-ENABLE_HOMOMORPHIC_ENCRYPTION=false
-ENABLE_ZERO_KNOWLEDGE_PROOFS=false
-ENABLE_SWARM_INTELLIGENCE=false
+# Experimental features
+ENABLE_QUANTUM_RESISTANCE=false
+ENABLE_EDGE_COMPUTING=false
+ENABLE_BLOCKCHAIN_INTEGRATION=false
 
-# Performance Optimizations
-ENABLE_GPU_ACCELERATION=false
-ENABLE_PARALLEL_TRAINING=true
-ENABLE_MODEL_COMPRESSION=true
-ENABLE_GRADIENT_COMPRESSION=false
+# Beta features
+ENABLE_ADVANCED_ANALYTICS=true
+ENABLE_AUTO_TUNING=false
+ENABLE_SMART_ROUTING=true
 
 # =============================================================================
-# BACKUP & RECOVERY
+# NOTES
 # =============================================================================
 
-# Backup Configuration
-BACKUP_ENABLED=true
-BACKUP_INTERVAL_HOURS=24
-BACKUP_RETENTION_DAYS=30
-BACKUP_STORAGE_PATH=./backups
-BACKUP_ENCRYPTION_KEY=
-
-# Recovery Settings
-AUTO_RECOVERY_ENABLED=true
-RECOVERY_TIMEOUT_MINUTES=10
-CHECKPOINT_INTERVAL_MINUTES=15
+# 1. Copy this file to .env and customize values for your environment
+# 2. Never commit .env files with real credentials to version control
+# 3. Use different configurations for different environments
+# 4. Validate configuration using: agent-mesh validate-config
+# 5. Some settings require restart to take effect
+# 6. Check logs for configuration warnings or errors
