--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,168 +1,142 @@
 {
+  // Python settings
   "python.defaultInterpreterPath": "./venv/bin/python",
-  "python.formatting.provider": "black",
-  "python.formatting.blackArgs": [
-    "--line-length=88",
-    "--target-version=py39"
-  ],
+  "python.terminal.activateEnvironment": true,
   "python.linting.enabled": true,
+  "python.linting.pylintEnabled": false,
   "python.linting.flake8Enabled": true,
-  "python.linting.flake8Args": [
-    "--max-line-length=88",
-    "--extend-ignore=E203,W503"
-  ],
   "python.linting.mypyEnabled": true,
-  "python.linting.mypyArgs": [
-    "--ignore-missing-imports",
-    "--follow-imports=silent",
-    "--show-column-numbers"
-  ],
-  "python.testing.pytestEnabled": true,
-  "python.testing.pytestArgs": [
-    "tests",
-    "-v",
-    "--tb=short"
-  ],
-  "python.testing.unittestEnabled": false,
-  "python.testing.nosetestsEnabled": false,
-  "python.sortImports.args": [
-    "--profile=black",
-    "--multi-line=3",
-    "--trailing-comma",
-    "--force-grid-wrap=0",
-    "--combine-as",
-    "--line-width=88"
-  ],
+  "python.linting.banditEnabled": true,
+  "python.formatting.provider": "black",
+  "python.sortImports.args": ["--profile", "black"],
+  "python.analysis.typeCheckingMode": "strict",
+  "python.analysis.autoImportCompletions": true,
+
+  // File formatting
   "editor.formatOnSave": true,
-  "editor.formatOnPaste": false,
-  "editor.formatOnType": false,
+  "editor.formatOnPaste": true,
   "editor.codeActionsOnSave": {
     "source.organizeImports": true,
-    "source.fixAll.flake8": true
+    "source.fixAll": true
   },
-  "editor.rulers": [
-    88
-  ],
+
+  // General editor settings
   "editor.tabSize": 4,
   "editor.insertSpaces": true,
   "editor.detectIndentation": false,
+  "editor.trimAutoWhitespace": true,
   "files.trimTrailingWhitespace": true,
   "files.insertFinalNewline": true,
   "files.trimFinalNewlines": true,
+
+  // File associations
+  "files.associations": {
+    "*.yml": "yaml",
+    "*.yaml": "yaml",
+    "Dockerfile*": "dockerfile",
+    ".env*": "properties",
+    "requirements*.txt": "pip-requirements"
+  },
+
+  // Exclude patterns for file explorer
   "files.exclude": {
     "**/__pycache__": true,
     "**/*.pyc": true,
-    "**/.pytest_cache": true,
-    "**/.mypy_cache": true,
-    "**/.coverage": true,
-    "**/htmlcov": true,
-    "**/node_modules": true,
-    "**/.DS_Store": true,
-    "**/dist": true,
-    "**/build": true,
-    "**/*.egg-info": true
-  },
-  "files.watcherExclude": {
-    "**/__pycache__/**": true,
-    "**/.pytest_cache/**": true,
-    "**/.mypy_cache/**": true,
-    "**/node_modules/**": true,
-    "**/dist/**": true,
-    "**/build/**": true
-  },
-  "search.exclude": {
-    "**/__pycache__": true,
-    "**/.pytest_cache": true,
-    "**/.mypy_cache": true,
-    "**/node_modules": true,
-    "**/dist": true,
-    "**/build": true,
+    "**/*.pyo": true,
     "**/*.egg-info": true,
-    "**/htmlcov": true
+    "**/.pytest_cache": true,
+    "**/.coverage": true,
+    "**/.mypy_cache": true,
+    "**/node_modules": true,
+    "**/.git": false
   },
-  "terminal.integrated.defaultProfile.linux": "bash",
+
+  // Search exclude patterns
+  "search.exclude": {
+    "**/node_modules": true,
+    "**/bower_components": true,
+    "**/*.code-search": true,
+    "**/__pycache__": true,
+    "**/*.pyc": true,
+    "**/.coverage": true,
+    "**/.mypy_cache": true,
+    "**/.pytest_cache": true
+  },
+
+  // Language specific settings
+  "[python]": {
+    "editor.defaultFormatter": "ms-python.black-formatter",
+    "editor.tabSize": 4,
+    "editor.codeActionsOnSave": {
+      "source.organizeImports": true
+    }
+  },
+
+  "[json]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode",
+    "editor.tabSize": 2
+  },
+
+  "[yaml]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode",
+    "editor.tabSize": 2
+  },
+
+  "[markdown]": {
+    "editor.wordWrap": "on",
+    "editor.quickSuggestions": false
+  },
+
+  // Testing
+  "python.testing.pytestEnabled": true,
+  "python.testing.unittestEnabled": false,
+  "python.testing.pytestArgs": [
+    "tests"
+  ],
+
+  // Git settings
+  "git.autofetch": true,
+  "git.confirmSync": false,
+  "git.enableSmartCommit": true,
+
+  // Docker settings
+  "docker.languageserver.formatter.ignoreMultilineInstructions": true,
+
+  // Terminal settings
   "terminal.integrated.env.linux": {
     "PYTHONPATH": "${workspaceFolder}/src"
   },
-  "json.schemas": [
-    {
-      "fileMatch": [
-        "package.json"
-      ],
-      "url": "https://json.schemastore.org/package.json"
-    },
-    {
-      "fileMatch": [
-        "docker-compose*.yml",
-        "docker-compose*.yaml"
-      ],
-      "url": "https://json.schemastore.org/docker-compose.json"
-    }
+
+  // IntelliSense settings
+  "python.analysis.extraPaths": [
+    "./src"
   ],
-  "yaml.schemas": {
-    "https://json.schemastore.org/github-workflow.json": [
-      ".github/workflows/*.yml",
-      ".github/workflows/*.yaml"
-    ],
-    "https://json.schemastore.org/github-action.json": [
-      "action.yml",
-      "action.yaml"
-    ]
-  },
-  "docker.defaultRegistryPath": "ghcr.io/your-org",
-  "kubernetes.kubectlPath": "/usr/local/bin/kubectl",
-  "kubernetes.helmPath": "/usr/local/bin/helm",
-  "git.ignoreLimitWarning": true,
-  "git.autofetch": true,
-  "git.enableSmartCommit": true,
-  "git.confirmSync": false,
-  "git.defaultCloneDirectory": "~/workspace",
-  "extensions.ignoreRecommendations": false,
-  "workbench.editorAssociations": {
-    "*.ipynb": "jupyter-notebook"
-  },
+
+  // Jupyter settings
   "jupyter.askForKernelRestart": false,
-  "jupyter.interactiveWindow.collapseCellInputCode": "firstLine",
-  "todo-tree.general.tags": [
-    "TODO",
-    "FIXME",
-    "HACK",
-    "NOTE",
-    "BUG",
-    "XXX"
-  ],
-  "todo-tree.highlights.defaultHighlight": {
-    "icon": "alert",
-    "type": "tag",
-    "foreground": "red",
-    "background": "yellow",
-    "opacity": 50,
-    "iconColour": "blue"
-  },
-  "coverage-gutters.coverageFileNames": [
-    "coverage.xml",
-    "lcov.info",
-    ".coverage"
-  ],
-  "coverage-gutters.showLineCoverage": true,
-  "coverage-gutters.showRulerCoverage": true,
-  "rust-analyzer.check.command": "clippy",
-  "go.formatTool": "goimports",
-  "go.useLanguageServer": true,
-  "go.lintTool": "golangci-lint",
-  "go.testFlags": [
-    "-v",
-    "-race"
-  ],
-  "eslint.workingDirectories": [
-    "src/web/dashboard"
-  ],
-  "typescript.preferences.importModuleSpecifier": "relative",
-  "javascript.preferences.importModuleSpecifier": "relative",
-  "emmet.includeLanguages": {
-    "javascript": "javascriptreact",
-    "typescript": "typescriptreact"
-  },
-  "task.autoDetect": "on",
-  "task.quickOpen.history": 10
+  "jupyter.interactiveWindow.textEditor.executeSelection": true,
+
+  // Performance settings
+  "python.analysis.memory.keepLibraryAst": true,
+  "python.analysis.indexing": true,
+
+  // Security settings
+  "python.analysis.stubPath": "./typings",
+  "python.analysis.diagnosticMode": "workspace",
+
+  // Extension recommendations
+  "extensions.recommendations": [
+    "ms-python.python",
+    "ms-python.black-formatter",
+    "ms-python.isort",
+    "ms-python.mypy-type-checker",
+    "ms-python.flake8",
+    "ms-vscode.vscode-json",
+    "redhat.vscode-yaml",
+    "ms-vscode.vscode-docker",
+    "eamodio.gitlens",
+    "github.vscode-pull-request-github",
+    "ms-toolsai.jupyter",
+    "esbenp.prettier-vscode"
+  ]
 }
